samples/_failures_safe/1760887188_bb7174_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae83b71d.c: In function ‘main’:
./samples/SAFE/__tmp_ae83b71d.c:173:13: error: expected ‘;’ at end of input
  173 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_ae83b71d.c:173:5: error: expected declaration or statement at end of input
  173 |     return 0
      |     ^~~~~~
